# OpenFly-Platform-Reproduction

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  README_OpenFly_Platform_Official.md  analyze_airsim_smoke_results.py  download_openfly_airsim_scene.py  eval_airsim_4bit_smoke.py  generate_reproduction_audit.py  infer_openfly_4bit.py  prepare_airsim_review_assets.py  requirements.txt  run_openfly_experiments.py  run_openfly_extended_experiments.py
configs/: env_airsim_16.yaml  env_airsim_18.yaml  env_airsim_23.yaml  env_airsim_26.yaml  env_airsim_gz.yaml  env_airsim_sh.yaml  env_game_gtav.yaml  env_gs_ecust.yaml  env_gs_nwpu01.yaml  env_gs_nwpu02.yaml  env_gs_sjtu01.yaml  env_gs_sjtu02.yaml  env_ue_bigcity.yaml  env_ue_smallcity.yaml  eval_test.json
demo_results/: action9_bias_analysis.md  advisor_review_report.md  manifest.json  official_eval_alignment_audit.md  openfly_own_video_result.json  reproduction_audit.md  simulation_eval_plan.md
demo_results/airsim_smoke/20260629_000450/: pip_freeze.txt  results.json  summary.md
demo_results/airsim_smoke/20260629_000613/: results.json
demo_results/airsim_smoke/20260629_000903/: pip_freeze.txt  results.json
demo_results/airsim_smoke/20260629_002308/: results.json  summary.md
demo_results/airsim_smoke/20260629_002455/: results.json  summary.md
demo_results/airsim_smoke/20260629_002706/: results.json  summary.md
demo_results/airsim_smoke/20260629_002957/: results.json  summary.md
demo_results/airsim_smoke/20260629_003017/: results.json  summary.md
demo_results/airsim_smoke/20260629_003217/: results.json  summary.md
demo_results/airsim_smoke/20260629_004035/: analysis.json  analysis.md  results.json  summary.md
demo_results/airsim_smoke/20260629_005458/: analysis.json  analysis.md  results.json  summary.md
demo_results/experiments/20260628_232446/: results.json  summary.md
demo_results/experiments/20260628_234304/: results.json  summary.md
demo_results/extended_experiments/20260628_235508/: results.json  summary.md
demo_results/review_assets/airsim_env16_30_cases/: README.md  cases.json
demo_results/topic_review/: README.md  autofly_reading_notes.md  defense_qna.md  openfly_reading_notes.md  openfly_vs_autofly_comparison.md  presentation_outline.md  prior_work_integration.md
envs/airsim/AirSim/: settings.json
envs/gs/SIBR_viewers/src/core/assets/: CameraRecorder.cpp  CameraRecorder.hpp  InputCamera.cpp  InputCamera.hpp
envs/gs/SIBR_viewers/src/core/graphics/: Image.hpp
envs/gs/SIBR_viewers/src/core/view/: InteractiveCameraHandler.cpp
scene_data/seg_map/: env_airsim_16.jsonl  env_airsim_18.jsonl  env_airsim_23.jsonl  env_airsim_26.jsonl  env_airsim_gz.jsonl  env_airsim_sh.jsonl  env_game_gtav.jsonl  env_gs_ecust.jsonl  env_gs_nwpu01.jsonl  env_gs_nwpu02.jsonl  env_gs_sjtu01.jsonl  env_gs_sjtu02.jsonl  env_ue_bigcity.jsonl  env_ue_smallcity.jsonl
scripts/sim/: airsim_bridge.py  env_bridge.py  gs_bridge.py  gtav_bridge.py  ue_bridge.py
scripts/toolchain/: pcdgen_tool.sh  seggen_tool.sh  trajgen_tool.sh
tool_ws/src/ins_gen/: gpt.py  gpt_api_config.json  gpt_generation.py  process.py
tool_ws/src/pcd_gen/scripts/: airsim_pointcloud.py  gtav_pointcloud.py
tool_ws/src/seg_gen/: CMakeLists.txt  package.xml
tool_ws/src/seg_gen/include/: loadpcdmap.hpp
tool_ws/src/seg_gen/launch/: bev_seg_launch.py  manual_seg_launch.py
tool_ws/src/seg_gen/rviz/: seg_gen.rviz
tool_ws/src/seg_gen/scripts/: bev_seg_gen.py
tool_ws/src/seg_gen/src/: bev_seg.cc  bev_seg_node.cc  manual_seg_node.cc
tool_ws/src/traj_gen/: CMakeLists.txt  package.xml
tool_ws/src/traj_gen/include/: common.h
tool_ws/src/traj_gen/include/base/: common.h  eigen_types.h  geometry_eigen_vector.hpp  logs.h  math.hpp  parameter.h  tcpserver.hpp
tool_ws/src/traj_gen/include/map/: loadpcdmap.hpp  seggridmap.hpp  voxel_map.hpp
tool_ws/src/traj_gen/include/navi/: pathsearch.hpp
tool_ws/src/traj_gen/launch/: traj_gen_launch.py
tool_ws/src/traj_gen/rviz/: traj_gen.rviz
tool_ws/src/traj_gen/src/: traj_gen.cc  traj_gen_node.cc
train/: eval.py  eval_gtav.py  train.py  train.sh
train/dataset_builder/vln/: vln_dataset_builder.py  vln_dataset_builder_test.py
train/datasets/: __init__.py  data_collector.py  data_utils.py  dataset.py
train/model/: __init__.py  base_prompter.py  config.py  llm_backbone.py  load_model.py  metrics.py  prismatic.py  prompt_llama2.py  strategy.py  vision_backbone.py
(+3 files in other folders)
